Add change to footer, transforming a section to a div and removed some stray end tags.

--- a/comedians.html
+++ b/comedians.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox logo">
+                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox-logo">
                 The Giggly Fox
             </a>
 
@@ -96,7 +96,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic1.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Max Vayne"></a>
+                    alt="Image of Max Vayne">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -117,7 +117,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic2.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Preston Harvey"></a>
+                    alt="Image of Preston Harvey">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -138,7 +138,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic3.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Sadie Padler"></a>
+                    alt="Image of Sadie Padler">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -160,7 +160,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic4.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Nadine Cross"></a>
+                    alt="Image of Nadine Cross">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -181,7 +181,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic5.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Ada Wang"></a>
+                    alt="Image of Ada Wang">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -202,7 +202,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic6.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Gordon Freyman"></a>
+                    alt="Image of Gordon Freyman">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -224,7 +224,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic7.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Nathan Dreyk"></a>
+                    alt="Image of Nathan Dreyk">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -245,7 +245,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic8.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Sheeva Palomar"></a>
+                    alt="Image of Sheeva Palomar">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -266,7 +266,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic9.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Johanna Dark"></a>
+                    alt="Image of Johanna Dark">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -288,7 +288,7 @@
         <div class="row">
             <div class="col-12 col-md-6 comedian-image">
                 <img src="assets/images/comic10.jpg" class="img-fluid mx-auto d-block" width="235" height="235"
-                    alt="Image of Dutch Vanderbinde"></a>
+                    alt="Image of Dutch Vanderbinde">
             </div>
             <div class="comedian-bio-container text-center">
                 <div class="comedian-name">
@@ -308,14 +308,14 @@
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
         <div class="container p-4 pb-0">
-            <section class="mb-4">
+            <div class="mb-4">
                 <a class="btn btn-outline-light btn-floating m-1" href="http://facebook.com" target="_blank"
                     role="button"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://twitter.com" target="_blank"
                     role="button"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://instagram.com" target="_blank"
                     role="button"><i class="fa-brands fa-instagram"></i></a>
-            </section>
+            </div>
         </div>
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
