--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox logo">
+                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox-logo">
                 The Giggly Fox
             </a>
 
@@ -259,14 +259,14 @@
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
         <div class="container p-4 pb-0">
-            <section class="mb-4">
+            <div class="mb-4">
                 <a class="btn btn-outline-light btn-floating m-1" href="http://facebook.com" target="_blank"
                     role="button"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://twitter.com" target="_blank"
                     role="button"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="http://instagram.com" target="_blank"
                     role="button"><i class="fa-brands fa-instagram"></i></a>
-            </section>
+            </div>
         </div>
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
