Add go to top button on index.html and comedians.html and its respective css rules

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox-logo">
+                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfoxlogo">
                 The Giggly Fox
             </a>
 
@@ -125,7 +125,7 @@
     </svg>
 
     <!--Shows-->
-    <section id="upcoming-shows" class="upcoming-shows">
+    <section class="upcoming-shows">
         <div class="shows-container">
             <div class="row">
                 <div class="col-12">
@@ -183,7 +183,7 @@
     </svg>
 
     <!--Comedians-->
-    <section id="upcoming-shows" class="upcoming-shows">
+    <section class="upcoming-shows">
         <div class="shows-container">
             <div class="row">
                 <div class="col-12">
@@ -234,8 +234,8 @@
             </div>
         </div>
         <div class="text-center col-12 d-md-block">
-            <button class="btn btn-primary" aria-label="View all comedians" type="button"><a href="comedians.html"
-                    target="_blank" style="text-decoration:none">View all comedians</a></button>
+            <a href="comedians.html" target="_blank"><button class="btn btn-primary" aria-label="View all comedians"
+                    type="button">View all comedians</button></a>
         </div>
     </section>
 
@@ -247,14 +247,17 @@
                 name="mc-embedded-subscribe-form" class="validate" novalidate>
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email"
                     required>
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name=""
-                        tabindex="-1" value=""></div>
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" tabindex="-1">
+                </div>
                 <div class="clear"></div>
                 <button name="subscribe" id="mc-embedded-subscribe" class="button" aria-label="Submit"
                     type="submit">Subscribe me</button>
             </form>
         </div>
     </div>
+
+    <!--Go to top button-->
+    <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i></a>
 
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
@@ -273,7 +276,6 @@
             © 2023 Copyright:
             <a class="text-white" href="index.html">TheGigglyFox.com</a>
         </div>
-
     </footer>
 </body>
 
