--- a/comedians.html
+++ b/comedians.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfox-logo">
+                <img src="assets/images/gigglyfox logo.png" class="d-inline-block align-top" alt="gigglyfoxlogo">
                 The Giggly Fox
             </a>
 
@@ -304,6 +304,8 @@
         </div>
     </div>
 
+    <!--Go to top button-->
+    <a class="gotopbtn" href="#"> <i class="fas fa-arrow-up"></i></a>
 
     <!--Footer-->
     <footer class="bg-dark text-center text-white">
