Add shows.html page

--- a/comedians.html
+++ b/comedians.html
@@ -38,10 +38,10 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Shows" class="nav-link">Shows</a>
+                        <a href="shows.html" class="nav-link">Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Comedians" class="nav-link">Comedians</a>
+                        <a href="comedians.html" class="nav-link">Comedians</a>
                     </li>
                     <li class="nav-item">
                         <a href="#Contact" class="nav-link">Contact</a>
