--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Shows" class="nav-link">Shows</a>
+                        <a href="shows.html" class="nav-link">Shows</a>
                     </li>
                     <li class="nav-item">
                         <a href="comedians.html" class="nav-link">Comedians</a>
@@ -135,38 +135,38 @@
             <div class="row upcoming-shows">
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">FRIDAY | 18th of August</h3>
-                    <a href="#" target="_blank"><img src="assets/images/show1.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show1"></a>
+                    <img src="assets/images/show1.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show1">
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">SATURDAY | 19th of August</h3>
-                    <a href="#" target="_blank"><img src="assets/images/show2.png" class="img-fluid mx-auto d-block"
-                            width="200" height="202" alt="Poster of comedy show2"></a>
+                    <img src="assets/images/show2.png" class="img-fluid mx-auto d-block"
+                            width="200" height="202" alt="Poster of comedy show2">
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">SUNDAY | 20th of August</h3>
-                    <a href="#" target="_blank"><img src="assets/images/show3.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show3"></a>
+                    <img src="assets/images/show3.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show3">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">FRIDAY | 25th of August</h3>
-                    <a href="#" target="_blank"><img src="assets/images/show4.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show4"></a>
+                    <img src="assets/images/show4.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show4">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">SATURDAY | 26th of August</h3>
-                    <a href="#" target="_blank"><img src="assets/images/show5.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show5"></a>
+                    <img src="assets/images/show5.png" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show5">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">SUNDAY | 27th of August</h3>
-                    <a href="#" target="_blank"><img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show6"></a>
+                    <img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block"
+                            width="202" height="202" alt="Poster of comedy show6">
                 </div>
             </div>
         </div>
         <div class="text-center col-12 d-md-block">
-            <button class="btn btn-primary" type="button">View all upcoming shows</button>
+            <a href="shows.html" target="_blank"></a><button class="btn btn-primary" type="button">View all upcoming shows</button></a>
         </div>
     </section>
 
