Add show images and dates to shows.html

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="text-center col-12 d-md-block">
-            <a href="shows.html" target="_blank"></a><button class="btn btn-primary" type="button">View all upcoming shows</button></a>
+            <a href="shows.html" target="_blank"><button class="btn btn-primary" type="button">View all upcoming shows</button></a>
         </div>
     </section>
 
