Add show descriptions for each individual show.

--- a/shows.html
+++ b/shows.html
@@ -103,11 +103,13 @@
                     FRIDAY | 18th of August
                 </div>
                 <div class="comedian-bio">
-                    <p>Max Vayne is a Leicester-born comedic sensation. With witty observations and charming banter, he
-                        brings laughter to audiences
-                        nationwide. TV appearances, radio gigs, and charity work cement his influence. A master of
-                        one-liners, Adam's quick wit
-                        and charisma keep the world giggling. A true comedic gem with a bright future ahead.</p>
+                    <h5 class="text-center" style="font-weight:bolder">PRESTON GARVEY AND FRIENDS</h5>
+                    <ul>
+                        <li>Show starts at 19:30.</li>
+                        <li>Featuring Sadie Padler, Gordon Freyman and Sheeva Palomar.</li>
+                        <li>All sales final. Tickets are non-refundable.</li>
+                        <li>Ages 16+ .</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -124,11 +126,13 @@
                     SATURDAY | 19th of August
                 </div>
                 <div class="comedian-bio">
-                    <p>A hilarious comedian hailing from Newcastle! With a natural gift for comedy, he crafts uproarious
-                        laughter through
-                        clever quips and a magnetic stage presence. Preston's comedic brilliance lights up stages across
-                        the nation, leaving
-                        audiences in stitches. A rising star set to conquer the comedic world!</p>
+                    <h5 class="text-center" style="font-weight:bolder">MAX VAYNE RESIDENCY</h5>
+                    <ul>
+                        <li>Show starts at 20:30.</li>
+                        <li>Featuring Nadine Cross, Nathan Dreyk and Johanna Dark.</li>
+                        <li>All sales final. Tickets are non-refundable.</li>
+                        <li>£18 minimum purchase per person.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -145,12 +149,13 @@
                     SUNDAY | 20th of August
                 </div>
                 <div class="comedian-bio">
-                    <p>Born in the heart of Ireland, Sadie's comedic journey started with her razor-sharp wit
-                        and captivating storytelling. Her acts are a rollercoaster of laughter, touching on everything
-                        from Irish
-                        culture to everyday absurdities. A comedic force to be reckoned with, Sadie leaves audiences in
-                        stitches, making her
-                        mark on the world of comedy.</p>
+                    <h5 class="text-center" style="font-weight:bolder">PROPER COMEDY SHOW</h5>
+                    <ul>
+                        <li>Show starts at 19:00.</li>
+                        <li>Ada Wang and Dutch Vanderbinde host this fun show.</li>
+                        <li>If you have not arrived at the venue within 30 minutes of showtime, your tickets will be cancelled and your seat may be
+                        sold to the next customer.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -167,11 +172,12 @@
                     FRIDAY | 25th of August
                 </div>
                 <div class="comedian-bio">
-                    <p>With a charming British flair, Nadine delivers side-splitting humor and
-                        relatable anecdotes that resonate with audiences. Her quick wit and magnetic stage presence keep
-                        the laughter flowing. A
-                        rising star on the London comedy scene, Nadine is destined to leave a lasting impression with
-                        her comedic prowess.</p>
+                    <h5 class="text-center" style="font-weight:bolder">OPEN MIC NIGHT</h5>
+                    <ul>
+                        <li>Show starts at 18:30.</li>
+                        <li>All sales final. Tickets are non-refundable.</li>
+                        <li>Individual comedian appearances subject to change without notice.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -188,11 +194,13 @@
                     SATURDAY | 26th of August
                 </div>
                 <div class="comedian-bio">
-                    <p>Combining her rich cultural background with sharp wit, Ada's performances are a delightful blend
-                        of East and West. From
-                        cultural quirks to modern-day mishaps, she finds humor in it all. With her infectious laughter
-                        and engaging presence,
-                        Ada is winning hearts on stages worldwide.</p>
+                    <h5 class="text-center" style="font-weight:bolder">MAX VAYNE RESIDENCY</h5>
+                    <ul>
+                        <li>Show starts at 20:30.</li>
+                        <li>Featuring Preston Harvey, Nathan Dreyk and Sadie Padler.</li>
+                        <li>All sales final. Tickets are non-refundable.</li>
+                        <li>£18 minimum purchase per person.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -209,12 +217,13 @@
                     SUNDAY | 27th of August
                 </div>
                 <div class="comedian-bio">
-                    <p>The Scottish Comedy Maestro from Aberdeen! With a delightful blend of Scottish humor and clever
-                        anecdotes, Gordon lights
-                        up stages with uproarious laughter. His unique take on life has made him a beloved figure in the
-                        comedy
-                        scene. A true comedic gem from Aberdeen, Gordon leaves audiences in stitches wherever he
-                        performs.</p>
+                    <h5 class="text-center" style="font-weight:bolder">INTERNATIONAL COMEDY SPOT</h5>
+                    <ul>
+                        <li>Show starts at 17:00.</li>
+                        <li>Featuring Dutch Vanderbinde, Sheeva Palomar and Ada Wang.</li>
+                        <li>All sales final. Tickets are non-refundable.</li>
+                        <li>Age 16+ .</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -231,11 +240,13 @@
                     FRIDAY | 1st of September
                 </div>
                 <div class="comedian-bio">
-                    <p>With an innate ability to find humor in everyday situations, Nathan brings uproarious laughter to
-                        audiences. His comedic
-                        charm and relatable stories make every show an unforgettable experience. A rising talent from
-                        Manchester, Nathan is set to
-                        conquer the comedy world with his infectious energy and charisma.</p>
+                    <h5 class="text-center" style="font-weight:bolder">MATINEE WITH GORDON FREYMAN</h5>
+                    <ul>
+                        <li>Show starts at 17:00.</li>
+                        <li>Featuring Johanna Dark, Sheeva Palomar and Nadine Cross.</li>
+                        <li>All sales final. Tickets are non-refundable.</li>
+                        <li>Individual comedian appearances subject to change without notice.</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -252,11 +263,13 @@
                     SATURDAY | 2nd of September
                 </div>
                 <div class="comedian-bio">
-                    <p>With a delightful blend of Indian culture and modern wit, Sheeva's performances are a riot of
-                        laughter. Her clever
-                        observations and relatable humor connect with diverse audiences. A rising star in the comedy
-                        circuit, Sheeva is breaking
-                        barriers and leaving a lasting comedic impact.</p>
+                    <h5 class="text-center" style="font-weight:bolder">MAX VAYNE RESIDENCY</h5>
+                    <ul>
+                        <li>Show starts at 20:30.</li>
+                        <li>Featuring Preston Harvey, Ada Wang and Sadie Padler.</li>
+                        <li>All sales final. Tickets are non-refundable.</li>
+                        <li>£18 minimum purchase per person.</li>
+                    </ul>
                 </div>
             </div>
         </div>
