Add contact.html page

--- a/comedians.html
+++ b/comedians.html
@@ -44,7 +44,7 @@
                         <a href="comedians.html" class="nav-link">Comedians</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Contact" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -301,6 +301,22 @@
                         cultures to lighthearted anecdotes, his performances evoke genuine laughter.</p>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!--Newsletter signup form-->
+    <div class="newsletter-container">
+        <div class="card">
+            <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
+            <form action="thankyoupage.html" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                class="validate" novalidate>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email" required>
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" tabindex="-1">
+                </div>
+                <div class="clear"></div>
+                <button name="subscribe" id="mc-embedded-subscribe" class="button" aria-label="Submit"
+                    type="submit">Subscribe me</button>
+            </form>
         </div>
     </div>
 
