--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="comedians.html" class="nav-link">Comedians</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Contact" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
