--- a/shows.html
+++ b/shows.html
@@ -16,7 +16,7 @@
 
     <link href="assets/css/style.css" rel="stylesheet">
 
-    <title>The Giggly Fox</title>
+    <title>Shows</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                         <a href="comedians.html" class="nav-link">Comedians</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Contact" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
             </div>
