Add contact form to contact.html and its respective css rules.

--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,47 @@
                         width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                
+                <div class="col-md-6">
+                    <form action="#">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control mt-2" placeholder="First Name" required>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control mt-2" placeholder="Last Name" required>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="email" class="form-control mt-2" placeholder="Email" required>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control mt-2" placeholder="Phone Number" required>
+                                </div>
+                            </div>
+                            <div class="col-12 text-area">
+                                <div class="form-group">
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Insert your text"
+                                        rows="3" required></textarea>
+                                </div>
+                            </div>
+                            <div class="col-12 text-area text-center">
+                                <button class="btn btn-light" type="submit">Send</button>
+                            </div>
+                        </div>
+                    </form>
+                    <div class="text-white">
+                        <h2 class="text-center text-uppercase mt-4 font-weight-bolder">Where to find us</h2>
+                        <i class="fas fa-phone mt-3 span-text"></i> <span>(+44) 7777777777</span><br>
+                        <i class="fas fa-envelope mt-3 span-text"></i> <span>contact@thegigglyfox.com</span><br>
+                        <i class="fas fa-globe mt-3 span-text"></i> <span>High Street, Leicester LE1 5YN</span><br>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
