Add fix to subscribe button and add meta description

--- a/index.html
+++ b/index.html
@@ -5,54 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time!" />
 
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <link href="assets/css/style.css" rel="stylesheet">
-
     <title>The Giggly Fox</title>
 </head>
 
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/images/gigglyfoxlogo.png" class="d-inline-block align-top" alt="fox logo">
-                The Giggly Fox
-            </a>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">
+                    <img src="assets/images/gigglyfoxlogo.png" class="d-inline-block align-top" alt="fox logo">
+                    The Giggly Fox
+                </a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="shows.html" class="nav-link">Shows</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="comedians.html" class="nav-link">Comedians</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navmenu">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="shows.html" class="nav-link">Shows</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="comedians.html" class="nav-link">Comedians</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contact.html" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
 
-    <!--Header-->
-    <div id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
+    <!--Hero image-->
+    <section id="HeroImageCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item c-item active">
                 <img src="assets/images/club1slide.jpg" class="d-block w-100 c-img" alt="First slide">
@@ -84,10 +83,10 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
-    </div>
+    </section>
 
     <!--About us section-->
-    <div class="container">
+    <section class="container">
         <div class="aboutus col-8 bg-dark text-white">
             <h2>ABOUT US</h2>
             <p>Welcome to The Giggly Fox, Leicester's premier destination for laughter and a good time! Situated in the
@@ -110,7 +109,7 @@
                 the punchline.
                 We can't wait to see you and share in the joy of laughter together!</p>
         </div>
-    </div>
+    </section>
 
     <!--Waves-->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -135,38 +134,38 @@
             <div class="row upcoming-shows">
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">FRIDAY | 18th of August</h3>
-                    <img src="assets/images/show1.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show1">
+                    <img src="assets/images/show1.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Poster of comedy show1">
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">SATURDAY | 19th of August</h3>
-                    <img src="assets/images/show2.png" class="img-fluid mx-auto d-block"
-                            width="200" height="202" alt="Poster of comedy show2">
+                    <img src="assets/images/show2.png" class="img-fluid mx-auto d-block" width="200" height="202"
+                        alt="Poster of comedy show2">
                 </div>
                 <div class="col-12 col-md-4">
                     <h3 class="text-center showname">SUNDAY | 20th of August</h3>
-                    <img src="assets/images/show3.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show3">
+                    <img src="assets/images/show3.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Poster of comedy show3">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">FRIDAY | 25th of August</h3>
-                    <img src="assets/images/show4.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show4">
+                    <img src="assets/images/show4.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Poster of comedy show4">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">SATURDAY | 26th of August</h3>
-                    <img src="assets/images/show5.png" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show5">
+                    <img src="assets/images/show5.png" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Poster of comedy show5">
                 </div>
                 <div class="col-12 col-md-4 d-none d-md-block">
                     <h3 class="text-center showname">SUNDAY | 27th of August</h3>
-                    <img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block"
-                            width="202" height="202" alt="Poster of comedy show6">
+                    <img src="assets/images/show6.jpg" class="img-fluid mx-auto d-block" width="202" height="202"
+                        alt="Poster of comedy show6">
                 </div>
             </div>
         </div>
         <div class="text-center col-12 d-md-block">
-            <a href="shows.html" target="_blank"><button class="btn btn-primary" type="button">View all upcoming shows</button></a>
+            <a href="shows.html" target="_blank" class="btn btn-primary text-dark" aria-label="View all upcoming shows button">View all upcoming shows</a>
         </div>
     </section>
 
@@ -234,8 +233,8 @@
             </div>
         </div>
         <div class="text-center col-12 d-md-block">
-            <a href="comedians.html" target="_blank"><button class="btn btn-primary" aria-label="View all comedians"
-                    type="button">View all comedians</button></a>
+            <a href="comedians.html" target="_blank" class="btn btn-primary text-dark"
+                aria-label="View all comedians">View all comedians</button></a>
         </div>
     </section>
 
@@ -243,15 +242,11 @@
     <div class="newsletter-container">
         <div class="card">
             <p>Don't miss our updates, subscribe to get notified when shows are added!</p>
-            <form action="thankyoupage.html" method="get" id="mc-embedded-subscribe-form"
-                name="mc-embedded-subscribe-form" class="validate" novalidate>
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Your email"
-                    required>
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" tabindex="-1">
-                </div>
-                <div class="clear"></div>
-                <button name="subscribe" id="mc-embedded-subscribe" class="button" aria-label="Submit"
-                    type="submit">Subscribe me</button>
+            <form action="thankyoupage.html">
+                <input type="email" name="email" class="email" placeholder="Your email" required />
+                <button class="button" aria-label="Submit" type="submit">
+                    Subscribe me
+                </button>
             </form>
         </div>
     </div>
@@ -277,6 +272,9 @@
             <a class="text-white" href="index.html">TheGigglyFox.com</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
